--- a/apps/example/tsconfig.json
+++ b/apps/example/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@marceloterreiro/tsconfig/base",
+  "extends": "../../packages/tsconfig/base",
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
