--- a/packages/flash-calendar/tsconfig.json
+++ b/packages/flash-calendar/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@marceloterreiro/tsconfig/base",
+  "extends": "../../packages/tsconfig/base",
   "include": ["src", "./tsup.config.ts"],
   "exclude": ["node_modules", "dist"],
   "compilerOptions": {
